--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -3,10 +3,11 @@
 
 .home_container {
     background-color: $red_semi;
+
     .carousel_container {
-        background-color: $red;
+        background-color: $red_semi;
         position: relative;
-        // padding: 20px;
+        // padding: 2%;
         z-index: 3;
         flex: 1;
         height: calc(100vh - 120px);
@@ -66,7 +67,8 @@
                         }
 
                         @media screen and (max-width: 576px) {
-                            height: calc(100% + 42px);
+                            height: calc(100% + 0px);
+                            transform:scale(1.5);
                         }
                     }
                 }
@@ -271,31 +273,269 @@
         }
     }
 
-    .Product_container{
-        .Product_header{
+    .Product_container {
+        .Product_header {
             text-align: center;
-            .MuiTypography-root{
+            padding: 1%;
+
+            .MuiTypography-root {
                 color: $red;
                 font-size: 2.0em;
-                font-family: GillSans-Medium;
-                @media screen and (max-width:576px){
+                font-family: GillSans-Italic;
+
+                @media screen and (max-width:576px) {
                     font-size: 1.8em;
                 }
             }
         }
-        .Product_display{
+
+        .Product_display {
             background-color: $white;
         }
     }
+
+    .Coco_container {
+        .Coco_title {
+            text-align: center;
+            padding: 1%;
+            .MuiTypography-root {
+                color: $red;
+                font-size: 2.0em;
+                font-family: GillSans-Italic;
+
+                @media screen and (max-width:576px) {
+                    font-size: 1.8em;
+                }
+            }
+        }
+
+        .Coco_description {
+            background-image: linear-gradient(to right, rgba(16,77,87,0), rgba(16,77,87,1));
+            display: flex;
+            flex-direction: row;
+            @media screen and (max-width:768px){
+                background-image: linear-gradient(to right, rgba(16,77,87,0), rgba(16,77,87,0.3));
+                flex-direction: column;
+            }
+            @media screen and (max-width:576px){
+                flex-direction: column;
+            }
+            .Coco_left{
+                background-image: linear-gradient(to right, rgba(16,77,87,0), rgba(16,77,87,0));
+                display: flex;
+                width: 50%;
+                padding: 10%;
+                @media screen and (max-width:768px){
+                    width: 100%;
+                }
+                @media screen and (max-width:576px){
+                    width: 100%;
+                }
+                .MuiTypography-root{
+                    color: $red;
+                    font-size: 1.4em;
+                    font-family: GillSans-Italic;
+                    @media screen and (max-width:576px){
+                        font-size: 1.2em;
+                    }
+                    span{
+                        font-size: 1.3em;
+                        font-family: GillSans-MediumItalic;
+                        color: $red;
+                    }
+                }
+            }
+            .Coco_right{
+                display: flex;
+                width: 50%;
+                padding: 10%;
+                background-image: linear-gradient(to right, rgba(16,77,87,0.5), rgba(16,77,87,1));
+                @media screen and (max-width:768px){
+                    width: 100%;
+                }
+                @media screen and (max-width:576px){
+                    width: 100%;
+                }
+            .MuiTypography-root{
+                color: $white;
+                font-size: 1.4em;
+                font-family: GillSans-Italic;
+                @media screen and (max-width:576px){
+                    font-size: 1.2em;
+                }
+            }
+        }
+        }
+    }
+
+    .Speciality_container {
+        .Speciality_title {
+            text-align: center;
+            padding: 1%;
+            .MuiTypography-root {
+                color: $red;
+                font-size: 2.0em;
+                font-family: GillSans-Italic;
+
+                @media screen and (max-width:576px) {
+                    font-size: 1.8em;
+                }
+            }
+        }
+
+        .Speciality_description1 {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-around;
+            background-color: $white;
+            @media screen and (max-width:768px){
+                flex-direction: column;
+            }
+            @media screen and (max-width:576px){
+                flex-direction: column;
+            }
+            .sp_card{
+                display: flex;
+                flex-direction: column;
+                width: 23%;
+                // padding: 5%;
+                @media screen and (max-width:768px){
+                    width: 100%;
+                }
+                @media screen and (max-width:576px){
+                    width: 100%;
+                }
+                .sp_img{
+                    display: flex;
+                    justify-content: center;
+                    // padding: 25%;
+                    @media screen and (max-width:576px){
+                       padding: 0;
+                    }
+                    .img_vector{
+                        height: 150px;
+                        width: 150px;
+                        padding: 5%;
+                        @media screen and (max-width: 1440px) {
+                            height: 150px;
+                            width: 150px;
+                        }
+                        @media screen and (max-width: 768px) {
+                            padding: 2%;
+                            height: 120px;
+                            width: 120px;
+                        }
+                        @media screen and (max-width: 576px) {
+                            padding: 2%;
+                        }
+                    }
+                }
+                .sp_content{
+                    display: flex;
+                    text-align: center;
+                    // padding-bottom: 10%;
+                    @media screen and (max-width: 768px) {
+                        
+                    }
+            
+                    @media screen and (max-width: 576px) {
+                        padding: 2%;
+                    }
+                    .MuiTypography-root{
+                        font-family: GillSans;
+                        font-size: 1.1em;
+                        span{
+                            font-family: GillSans-Medium;
+                            font-weight: bold;
+                            font-size: 1.12em;
+                        }
+                    }
+                }
+            }
+        }
+        .Speciality_description2 {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            background-color: $white;
+            @media screen and (max-width:768px){
+                flex-direction: column;
+            }
+            @media screen and (max-width:576px){
+                flex-direction: column;
+            }
+            .sp_card{
+                display: flex;
+                flex-direction: column;
+                width: 23%;
+                // padding: 5%;
+                @media screen and (max-width:768px){
+                    width: 100%;
+                }
+                @media screen and (max-width:576px){
+                    width: 100%;
+                }
+                .sp_img{
+                    display: flex;
+                    justify-content: center;
+                    // padding: 25%;
+                    @media screen and (max-width:576px){
+                       padding: 0;
+                    }
+                    .img_vector{
+                        height: 150px;
+                        width: 150px;
+                        padding: 5%;
+                        @media screen and (max-width: 1440px) {
+                            height: 150px;
+                            width: 150px;
+                        }
+                        @media screen and (max-width: 768px) {
+                            padding: 2%;
+                            height: 120px;
+                            width: 120px;
+                        }
+                        @media screen and (max-width: 576px) {
+                            padding: 2%;
+                        }
+                    }
+                }
+                .sp_content{
+                    display: flex;
+                    text-align: center;
+                    // padding-bottom: 10%;
+                    @media screen and (max-width: 768px) {
+                        
+                    }
+            
+                    @media screen and (max-width: 576px) {
+                        padding: 2%;
+                    }
+                    .MuiTypography-root{
+                        font-family: GillSans;
+                        font-size: 1.1em;
+                        span{
+                            font-family: GillSans-Medium;
+                            font-weight: bold;
+                            font-size: 1.12em;
+                        }
+                    }
+                }
+            }
+        }
+    }
+
     .Kateel_container {
         .k_title {
             text-align: center;
-            .MuiTypography-root{
+            padding: 1%;
+            .MuiTypography-root {
                 color: $red;
                 padding: 5px;
                 font-size: 2.0em;
-                font-family: GillSans-Medium;
-                @media screen and (max-width:576px){
+                font-family: GillSans-Italic;
+
+                @media screen and (max-width:576px) {
                     font-size: 1.8em;
                 }
             }
@@ -305,14 +545,17 @@
             display: flex;
             flex-direction: row;
             justify-content: center;
+
             @media screen and (max-width:576px) {
                 flex-direction: column;
             }
+
             .k_left {
                 display: flex;
                 width: 33%;
                 text-align: center;
                 align-items: center;
+
                 @media screen and (max-width:576px) {
                     width: 100%;
                 }
@@ -323,26 +566,34 @@
                 justify-content: center;
                 background-color: $white;
                 width: 33%;
+
                 @media screen and (max-width:576px) {
                     width: 100%;
                 }
+
                 .k_img {
                     display: flex;
                     margin-bottom: 10px;
                     width: 250px;
                     max-height: 350px;
-                    filter: grayscale(40%);
+                    filter: grayscale(80%);
+                    @media screen and (max-width:768px) {
+                        width: 190px;
+                        max-height: 240px;
+                    }
                     @media screen and (max-width:576px) {
-                        width: 200px;
-                        max-height: 320px;
+                        width: 190px;
+                        max-height: 260px;
                     }
                 }
             }
+
             .k_right {
                 display: flex;
                 width: 33%;
                 text-align: center;
                 align-items: center;
+
                 @media screen and (max-width:576px) {
                     width: 100%;
                 }
