--- a/src/renders/header.scss
+++ b/src/renders/header.scss
@@ -44,7 +44,7 @@
                     max-height: 30px;
                 }
             }
-            .css-ahj2mt-MuiTypography-root{
+            .MuiTypography-root{
                 color: $red;
                 font-size: 1.6em;
                 align-self: center;
