--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -420,13 +420,20 @@
                             height: 150px;
                             width: 150px;
                         }
-                        @media screen and (max-width: 768px) {
+                        @media screen and (max-width: 991px) {
                             padding: 2%;
                             height: 120px;
                             width: 120px;
                         }
+                        @media screen and (max-width: 768px) {
+                            padding: 2%;
+                            height: 100px;
+                            width: 100px;
+                        }
                         @media screen and (max-width: 576px) {
                             padding: 2%;
+                            height: 90px;
+                            width: 90px;
                         }
                     }
                 }
@@ -490,13 +497,20 @@
                             height: 150px;
                             width: 150px;
                         }
-                        @media screen and (max-width: 768px) {
+                        @media screen and (max-width: 991px) {
                             padding: 2%;
                             height: 120px;
                             width: 120px;
                         }
+                        @media screen and (max-width: 768px) {
+                            padding: 2%;
+                            height: 100px;
+                            width: 100px;
+                        }
                         @media screen and (max-width: 576px) {
                             padding: 2%;
+                            height: 90px;
+                            width: 90px;
                         }
                     }
                 }
